fix(style): overlay page z-index

--- a/css/style.css
+++ b/css/style.css
@@ -122,6 +122,7 @@ main {
   right: 0;
   height: 100vh;
   display: none;
+  z-index: 2;
 }
 
 .active {
